--- a/templates/admin_user/show.html.twig
+++ b/templates/admin_user/show.html.twig
@@ -1,83 +1,47 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Détails Utilisateur{% endblock %}
+{% block title %}Liste des Utilisateurs{% endblock %}
 
 {% block body %}
 <div class="container py-5">
-    <h1 class="mb-4 text-center">{{ user.nom }} {{ user.prenom }}</h1>
+    <h1 class="mb-4 text-center">Liste des Utilisateurs</h1>
 
-    <div class="card shadow-sm rounded-4">
-        <div class="card-body p-4">
-            
-            <!-- 💬 Ici on affiche la photo -->
-        <div class="text-center my-4">
-    {% if user.profileImage %}
-        <img src="{{ asset('assets/images/avatars/' ~ user.profileImage) }}" 
-             alt="Photo de profil" 
-             class="rounded-circle shadow" 
-             style="width: 120px; height: 120px; object-fit: cover;">
-    {% else %}
-        <img src="{{ asset('assets/images/default-avatar.png') }}" 
-             alt="Photo de profil" 
-             class="rounded-circle shadow" 
-             style="width: 120px; height: 120px; object-fit: cover;">
-    {% endif %}
-</div>
-
-
-            <table class="table table-bordered mb-0">
-                <tbody>
+    <div class="table-responsive">
+        <table class="table table-bordered table-hover">
+            <thead class="thead-dark">
+                <tr>
+                    <th>ID</th>
+                    <th>Nom</th>
+                    <th>Prénom</th>
+                    <th>Email</th>
+                    <th>Rôle</th>
+                    <th>Genre</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for user in users %}
                     <tr>
-                        <th scope="row">ID</th>
                         <td>{{ user.id }}</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Nom</th>
                         <td>{{ user.nom }}</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Prénom</th>
                         <td>{{ user.prenom }}</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Email</th>
                         <td>{{ user.email }}</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Téléphone</th>
-                        <td>{{ user.numeroTelephone }}</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Adresse</th>
-                        <td>{{ user.addresse }}</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Genre</th>
-                        <td>{{ user.genre }}</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Rôle</th>
                         <td>{{ user.type }}</td>
+                        <td>{{ user.genre }}</td>
+                        <td>
+                            <a href="{{ path('admin_user_edit', {'id': user.id}) }}" class="btn btn-sm btn-primary">
+                                Modifier
+                            </a>
+                            {{ include('admin_user/_delete_form.html.twig', { 'user': user }) }}
+                        </td>
                     </tr>
+                {% else %}
                     <tr>
-                        <th scope="row">Compte enregistré</th>
-                        <td>{{ user.enregistrer ? 'Oui' : 'Non' }}</td>
+                        <td colspan="7" class="text-center">Aucun utilisateur trouvé.</td>
                     </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-
-    <div class="mt-4 d-flex justify-content-between">
-        <a href="{{ path('admin_user_index') }}" class="btn btn-secondary">
-            ← Retour à la liste
-        </a>
-        <div>
-            <a href="{{ path('admin_user_edit', {'id': user.id}) }}" class="btn btn-primary me-2">
-                ✏️ Modifier
-            </a>
-            {{ include('admin_user/_delete_form.html.twig') }}
-        </div>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
 </div>
 {% endblock %}
