--- a/templates/partialsBack/mainBody.html.twig
+++ b/templates/partialsBack/mainBody.html.twig
@@ -21,13 +21,30 @@
                         <i class="fa fa-star"></i>
                     </button>
                     <div class="d-inline-block dropdown">
-                        <button type="button" data-toggle="dropdown" aria-haspopup="true"
-                            aria-expanded="false" class="btn-shadow dropdown-toggle btn btn-info">
-                            <span class="btn-icon-wrapper pr-2 opacity-7">
-                                <i class="fa fa-business-time fa-w-20"></i>
-                            </span>
-                            Buttons
-                        </button>
+                       <div class="d-inline-block dropdown">
+    <div class="d-inline-block dropdown">
+    <button type="button" class="btn btn-info btn-shadow dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <span class="btn-icon-wrapper pr-2 opacity-7">
+            <i class="fas fa-users-cog"></i>
+        </span>
+        Gestion des Utilisateurs
+    </button>
+
+    <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in">
+        <h6 class="dropdown-header text-primary">Actions Utilisateur</h6>
+
+        <a class="dropdown-item" href="{{ path('admin_user_new') }}">
+            <i class="fas fa-user-plus text-success me-2"></i> Ajouter un Utilisateur
+        </a>
+
+        <a class="dropdown-item" href="{{ path('admin_user_index') }}">
+    <i class="fas fa-users text-primary me-2"></i> Gérer les Utilisateurs
+</a>
+
+    </div>
+</div>
+
+
                         <div tabindex="-1" role="menu" aria-hidden="true"
                             class="dropdown-menu dropdown-menu-right">
                             <ul class="nav flex-column">
@@ -71,45 +88,102 @@
                 </div>
             </div>
         </div>
+        <div class="col-md-12 col-lg-6 offset-lg-3">
+    <div class="main-card mb-3 card">
+        <div class="card-header">
+            Invitation Admin
+         <div class="btn-actions-pane-right">
+    <div role="group" class="btn-group-sm btn-group">
+        <a href="{{ path('admin_user_pending') }}" class="btn btn-focus active">
+            Nouvelle invitation
+        </a>
+    </div>
+</div>
+
+        </div>
+        <div class="card-body">
+            {% if app.user and 'ROLE_ADMIN' in app.user.roles %}
+                <form method="post" action="{{ path('send_invitation_admin') }}">
+                    <div class="form-group">
+                        <label for="email">Adresse Email</label>
+                        <input type="email" class="form-control" name="email" id="email" placeholder="Entrer l'email de l'invité..." required>
+                    </div>
+                    <button type="submit" class="btn btn-primary mt-3">Envoyer l'invitation</button>
+                </form>
+            {% else %}
+                <p class="text-danger">Vous devez être connecté en tant qu'admin pour envoyer une invitation.</p>
+            {% endif %}
+
+            {% for message in app.flashes('success') %}
+                <div class="alert alert-success mt-3">{{ message }}</div>
+            {% endfor %}
+            {% for message in app.flashes('error') %}
+                <div class="alert alert-danger mt-3">{{ message }}</div>
+            {% endfor %}
+        </div>
+    </div>
+</div>
+
         <div class="row">
             <div class="col-md-6 col-xl-4">
-                <div class="card mb-3 widget-content bg-midnight-bloom">
-                    <div class="widget-content-wrapper text-white">
-                        <div class="widget-content-left">
-                            <div class="widget-heading">Total Orders</div>
-                            <div class="widget-subheading">Last year expenses</div>
-                        </div>
-                        <div class="widget-content-right">
-                            <div class="widget-numbers text-white"><span>1896</span></div>
-                        </div>
-                    </div>
-                </div>
+               
+            </div>
+            <div class="row">
+    <div class="col-md-12 col-lg-6 offset-lg-3">
+        <div class="main-card mb-3 card">
+            <div class="card-header">Répartition Hommes / Femmes</div>
+            <div class="card-body">
+                <canvas id="pieChartGenre" width="400" height="400"></canvas>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+<script>
+const ctxPie = document.getElementById('pieChartGenre').getContext('2d');
+
+const pieChartGenre = new Chart(ctxPie, {
+    type: 'pie',
+    data: {
+        labels: ['Hommes', 'Femmes'],
+        datasets: [{
+            label: 'Répartition',
+            data: [{{ hommes|default(0) }}, {{ femmes|default(0) }}],
+            backgroundColor: [
+                'rgba(54, 162, 235, 0.8)',    // Bleu pour Hommes
+                'rgba(255, 99, 132, 0.8)'     // Rose pour Femmes
+            ],
+            borderColor: [
+                'rgba(54, 162, 235, 1)',
+                'rgba(255, 99, 132, 1)'
+            ],
+            borderWidth: 1
+        }]
+    },
+    options: {
+        responsive: true,
+        plugins: {
+            legend: {
+                position: 'bottom',
+            },
+            tooltip: {
+                backgroundColor: 'rgba(0,0,0,0.75)',
+                padding: 10,
+                cornerRadius: 6,
+            }
+        }
+    }
+});
+</script>
+
+
+            <div class="col-md-6 col-xl-4">
+                
             </div>
             <div class="col-md-6 col-xl-4">
-                <div class="card mb-3 widget-content bg-arielle-smile">
-                    <div class="widget-content-wrapper text-white">
-                        <div class="widget-content-left">
-                            <div class="widget-heading">Clients</div>
-                            <div class="widget-subheading">Total Clients Profit</div>
-                        </div>
-                        <div class="widget-content-right">
-                            <div class="widget-numbers text-white"><span>$ 568</span></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-xl-4">
-                <div class="card mb-3 widget-content bg-grow-early">
-                    <div class="widget-content-wrapper text-white">
-                        <div class="widget-content-left">
-                            <div class="widget-heading">Followers</div>
-                            <div class="widget-subheading">People Interested</div>
-                        </div>
-                        <div class="widget-content-right">
-                            <div class="widget-numbers text-white"><span>46%</span></div>
-                        </div>
-                    </div>
-                </div>
+           
             </div>
             <div class="d-xl-none d-lg-block col-md-6 col-xl-4">
                 <div class="card mb-3 widget-content bg-premium-dark">
@@ -127,15 +201,7 @@
         </div>
         <div class="row">
             <div class="col-md-12 col-lg-6">
-                <div class="main-card mb-3 card">
-                    <div class="card-header">
-                      Billets Vendus par Évènement
-                    </div>
-                    <div class="card-body">
-                      <canvas id="billetChart" height="300" ></canvas>
-                    </div>
-                  </div>
-                </div>
+             
 
 
               
@@ -157,21 +223,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="tab-content">
-                        <div class="tab-pane fade active show" id="tab-eg-55">
-                            <div class="widget-chart p-3">
-                                <div style="height: 350px">
-                                    <canvas id="line-chart"></canvas>
-                                </div>
-                                <div class="widget-chart-content text-center mt-5">
-                                    <div class="widget-description mt-0 text-warning">
-                                        <i class="fa fa-arrow-left"></i>
-                                        <span class="pl-1">175.5%</span>
-                                        <span class="text-muted opacity-8 pl-1">increased server
-                                            resources</span>
-                                    </div>
-                                </div>
-                            </div>
+                  
+                           
+                            
                             <div class="pt-2 card-body">
                                 <div class="row">
                                     <div class="col-md-6">
@@ -285,15 +339,7 @@
             <div class="col-md-6 col-xl-4">
                 <div class="card mb-3 widget-content">
                     <div class="widget-content-outer">
-                        <div class="widget-content-wrapper">
-                            <div class="widget-content-left">
-                                <div class="widget-heading">Total Orders</div>
-                                <div class="widget-subheading">Last year expenses</div>
-                            </div>
-                            <div class="widget-content-right">
-                                <div class="widget-numbers text-success">1896</div>
-                            </div>
-                        </div>
+                  
                     </div>
                 </div>
             </div>
