ajouter verification mail dans mot de passe oublier et recaptcha

--- a/templates/security/forget_password.html.twig
+++ b/templates/security/forget_password.html.twig
@@ -16,7 +16,15 @@
             <input type="email" name="email" id="email" class="form-control" required autofocus>
         </div>
 
-        <button class="btn btn-primary" type="submit">Send SMS Code</button>
+        <div class="form-group mb-3">
+            <label for="method">Choose Method</label>
+            <select name="method" class="form-control" required>
+                <option value="sms">Send Code via SMS</option>
+                <option value="email">Send Code via Email</option>
+            </select>
+        </div>
+
+        <button class="btn btn-primary" type="submit">Send Code</button>
     </form>
 
     <br>
