--- a/templates/security/reset_password.html.twig
+++ b/templates/security/reset_password.html.twig
@@ -14,11 +14,16 @@
         <div class="form-group mb-3">
             <label for="new_password">New Password</label>
             <input type="password" name="new_password" id="new_password" class="form-control" required>
-
             <input type="hidden" name="email" value="{{ email }}">
         </div>
+
+        <!-- ✅ reCAPTCHA -->
+        <div class="g-recaptcha mb-3" data-sitekey="{{ site_key }}"></div>
 
         <button class="btn btn-success" type="submit">Update Password</button>
     </form>
 </div>
+
+<!-- reCAPTCHA script -->
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 {% endblock %}
