--- a/templates/baseBack.html.twig
+++ b/templates/baseBack.html.twig
@@ -12,9 +12,7 @@
             {% include 'partialsBack/sidebar.html.twig' %}
             
             <main class="app-main__outer">
-                {% block body %}
-                {% include 'partialsBack/mainBody.html.twig' %}
-                {% endblock %}
+                {% block body %}{% endblock %}
             </main>
         </div>
     </div>
