--- a/templates/registration/confirmation_email.html.twig
+++ b/templates/registration/confirmation_email.html.twig
@@ -2,7 +2,7 @@
 
 <p>
     Please confirm your email address by clicking the following link: <br><br>
-    <a href="{{ url('app_verify_email') ~ '?token=' ~ token }}">Confirm my Email</a>.
+<a href="{{ url('app_verify_email', {'token': token}) }}">Confirm my Email</a>
 </p>
 
 <p>Cheers!</p>
